<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkbox_climbing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/climbing"
                android:textColor="#0000ff"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/chkbox_dance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dance"
                android:textColor="#0000ff"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/chkbox_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/draw"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_eating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eating"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_fitness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fitness"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reading"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_sing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sing"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_swimming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swimming"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_travel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <CheckBox
                android:id="@+id/chkbox_writing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/writing"
                android:textSize="24sp"
                android:textColor="#0000ff" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="#0000ff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourhobby"
                android:textColor="#ff0000"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>